[B][COLOR red]Update - v3.5.8 - March 29, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Fixed issue with random innacurate seasoncount.[/I]
[COLOR yellow]--[/COLOR][I] Fixed issue with random innacurate resume point
    saved. Issue would lose progress indicators for some shows.[/I]
[COLOR yellow]--[/COLOR][I] added notification when resolveURL fails for
    cached torrents.[/I]

[B][COLOR red]Update - v3.5.7 - March 24, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Fixed issue with random duplicate list items
    after playback ends when Autoplay is enabled.[/I]
[COLOR yellow]--[/COLOR][I] Fixed trakt api issue randomly placing
    Season0 at end of users watch list. This would
    alter the Next Up-Progress item.[/I]
[COLOR yellow]--[/COLOR][I] Fixed trakt api episode count not including
    Season0 when enabled. This would cause shows
    to vanish from Trakt Progress when the count was
    exceeded.[/I]
[COLOR yellow]--[/COLOR][I] Added color setting for Movies who's theatrical
    release date is greater than current date.[/I]

[B][COLOR red]Update - v3.5.6 - March 20, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Fixed torrent cache check for when debrid service
    is anything other than PM or RD it would drop other service.[/I]
[COLOR yellow]--[/COLOR][I] Fixed Movies-In Theaters. Some group advanced
    filtering is currently no longer working on IMDB.[/I]

[B][COLOR red]Update - v3.5.5 - March 19, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Dialog source select now respects setting for
    "Multiline Source list" like Directory source list.[/I]
[COLOR yellow]--[/COLOR][I] Added setting to "Sort torrents by size".  The new
    setting is enabled by default and found under
    "Torrent Settings".[/I]

[B][COLOR red]Update - v3.5.4 - March 18, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Added setting option for torrent secondary line to
    display as std info or magnet title.  Note this is skin
    dependent so secondary info line lengthens and