@@ -1,3 +1,11 @@
+[B][COLOR red]Update - v3.5.9 - March 30, 2020[/COLOR][/B]
+[COLOR yellow]--[/COLOR][I] Removed resolveURL notification of from previous
+    update.[/I]
+[COLOR yellow]--[/COLOR][I] Updated bookmarks caching method to now also
+    record show name and year for better tracking of
+    progress indicators.  This requires you to clear old
+    bookmarks for the new update to be in use.[/I]
+
 [B][COLOR red]Update - v3.5.8 - March 29, 2020[/COLOR][/B]
 [COLOR yellow]--[/COLOR][I] Fixed issue with random innacurate seasoncount.[/I]
 [COLOR yellow]--[/COLOR][I] Fixed issue with random innacurate resume point
